--- a/kafka-parent/consumer-service/pom.xml
+++ b/kafka-parent/consumer-service/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.13.2</version>
+    </dependency>
+    </dependencies>
+
 </project>
