Added services for kafka, rabbit & cloud streams

--- a/kafka-parent/pom.xml
+++ b/kafka-parent/pom.xml
@@ -7,8 +7,8 @@
     <modules>
         <module>consumer-service</module>
         <module>producer-service</module>
-        <module>collect-services</module>
-        <module>user-service</module>
+        <module>ms-services/collect-services</module>
+        <module>ms-services/user-service</module>
         <module>util-service</module>
     </modules>
 
@@ -60,6 +60,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        
         <!-- spring cloud stream dependencies -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -103,6 +104,11 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
 
@@ -119,6 +125,10 @@
                     </exclude>
                 </excludes>
             </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
