--- a/kafka-parent/ms-services/collect-services/pom.xml
+++ b/kafka-parent/ms-services/collect-services/pom.xml
@@ -7,40 +7,40 @@
         <groupId>com.minejava</groupId>
         <artifactId>kafka-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>util-service</artifactId>
+    <artifactId>collect-services</artifactId>
     <packaging>jar</packaging>
-
     <properties>
+        <util-service.version>1.0-SNAPSHOT</util-service.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <mapstruct.version>1.5.3.Final</mapstruct.version>
+        <util-service.version>1.0-SNAPSHOT</util-service.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>${mapstruct.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-processor</artifactId>
-            <version>${mapstruct.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-kafka</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.minejava</groupId>
+            <artifactId>util-service</artifactId>
+            <version>${util-service.version}</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
-
     <build>
+		<finalName>collect-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -48,5 +48,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
