--- a/kafka-parent/pom.xml
+++ b/kafka-parent/pom.xml
@@ -60,7 +60,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
         <!-- spring cloud stream dependencies -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
